fix: z-index

--- a/scss/layout/_burger-menu.scss
+++ b/scss/layout/_burger-menu.scss
@@ -60,6 +60,7 @@
   visibility: hidden;
   opacity: 0;
   transition: opacity 600ms ease;
+  z-index: 100;
   &.show {
     visibility: visible;
     opacity: 1;
